Moved modals down a bit; watch out, not sure why they were !important before.

--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -101,8 +101,8 @@ a[data-toggle="modal"]
 
 .modal-dialog
   padding: 5px
-  margin-top: 0px !important
-  margin-bottom: 0px !important
+  margin-top: 30px
+  margin-bottom: 0px
   padding-top: 30px
   .background-wrapper
     background: url("/images/pages/base/modal_background.png")
