Make components' patches tab and systems' patches tab look consistent Mix of previous stylings with spacing at top and white background

--- a/app/styles/editor/level/component/edit.sass
+++ b/app/styles/editor/level/component/edit.sass
@@ -5,7 +5,10 @@
   #component-patches
     padding: 0 10px 10px
     background: white
-  
+
+  .patches-view
+    padding: 10px 20px 10px 0px
+
   .navbar-text
     float: left
     
