--- a/app/styles/editor/level/system/edit.sass
+++ b/app/styles/editor/level/system/edit.sass
@@ -1,4 +1,14 @@
 #editor-level-system-edit-view
+  nav
+    margin-bottom: 0
+    
+  #system-patches
+    padding: 0 10px 10px
+    background: white
+
+  .patches-view
+    padding: 10px 20px 10px 0px
+
   .navbar-text
     float: left
 
