--- a/app/templates/modal/versions.jade
+++ b/app/templates/modal/versions.jade
@@ -10,15 +10,21 @@ block modal-body-content
   if dataList
     table.table.table-condensed
       tr
+        th
         th(data-i18n="general.name") Name
         th(data-i18n="general.version") Version
         th(data-i18n="general.commit_msg") Commit Message
       for data in dataList
         tr
           td
+            input(type="checkbox", value=data._id).select
+          td
             a(href="/editor/#{page}/#{data.slug || data._id}")
               | #{data.name}
           td #{data.version.major}.#{data.version.minor}
           td #{data.commitMessage}
+
+  div.delta-container
+    div.delta-view
 
 block modal-footer-content
