Adds nanoscroll for other tabs in editor

--- a/app/styles/editor/level/thangs_tab.sass
+++ b/app/styles/editor/level/thangs_tab.sass
@@ -68,8 +68,9 @@ $mobile: 1050px
     h3
       margin: 0 -20px 0 0
       
-    #thangs-treema-container
+    .editor-nano-container
       height: 90%
+      position: relative
       top: 20px
     #thangs-treema
       height: 100%
