--- a/app/templates/editor/level/add_thangs.jade
+++ b/app/templates/editor/level/add_thangs.jade
@@ -1,6 +1,6 @@
 h3(data-i18n="editor.level_tab_thangs_add") Add Thangs
 input(type="search", id="thang-search")
-div#thangs-list-container.nano
+div.editor-nano-container.nano
   #thangs-list.nano-content
     for group in groups
       h4= group.name
