--- a/app/templates/editor/level/thangs_tab.jade
+++ b/app/templates/editor/level/thangs_tab.jade
@@ -17,7 +17,7 @@ button.navbar-toggle.toggle.btn-primary#thangs-palette-toggle(type="button", dat
       i.icon-leaf
     button.btn.btn-primary(value="Misc", title="Misc")
       i.icon-question-sign
-  #thangs-treema-container.nano
+  .editor-nano-container.nano
     #thangs-treema.nano-content(title="Double click to configure a thang")
 
 .world-container.thangs-column
