Refactored game ranking buttons into a LadderSubmissionView.

--- a/app/templates/play/level/modal/victory.jade
+++ b/app/templates/play/level/modal/victory.jade
@@ -12,7 +12,7 @@ block modal-body-content
   
 block modal-footer-content
   if readyToRank
-    button.btn.btn-success.rank-game-button(data-i18n="play_level.victory_rank_my_game") Rank My Game
+    .ladder-submission-view
   else if level.get('type') === 'ladder'
     a.btn.btn-primary(href="/play/ladder/#{level.get('slug')}#my-matches", data-dismiss="modal", data-i18n="play_level.victory_go_ladder") Return to Ladder
   else if hasNextLevel
