--- a/app/styles/play/level/goals.sass
+++ b/app/styles/play/level/goals.sass
@@ -1,25 +1,24 @@
+@import "../../bootstrap/mixins"
+
 #goals-view
   position: absolute
   left: 10px
-  top: 42px
+  top: -100px
+  @include transition(top 0.5s ease-in-out)
   background-color: rgba(200,200,200,0.8)
   
   &.brighter
     background-color: rgba(200,200,200,1.0)
   
   border: black
-  padding: 5px 7px 5px 5px
+  padding: 15px 7px 5px 5px
   box-sizing: border-box
   border:  1px solid #333
   border-radius: 5px
-  cursor: pointer
-  user-select: none
-  -webkit-user-select: none
   
   h3
-    font-size: 16px
+    font-size: 14px
     margin: 0
-    line-height: 20px
     color: black
     
     i
