putting together the prizes page

--- a/app/styles/play/ladder/ladder.sass
+++ b/app/styles/play/ladder/ladder.sass
@@ -74,6 +74,13 @@
   #must-log-in button
     margin-right: 10px
 
+  #prize_table
+    width: 960px
+
+  #prize_table td
+    width: 200px 
+    vertical-align: top
+
 @media only screen and (max-width: 800px)
   #ladder-view
     #level-column img
