--- a/app/templates/play/ladder/ladder.jade
+++ b/app/templates/play/ladder/ladder.jade
@@ -46,7 +46,72 @@ block content
       #simulate-tab-view
     .tab-pane.well#prizes
       h1(data-i18n="ladder.prizes_remember_to_add_i18n_tags") Tournament Prizes
-      p(data-i18n="ladder.prizes_but_this_is_just_placeholder") Fill in the Greed prizes list here.
+      p(data-i18n="ladder.prizes_but_this_is_just_placeholder") Want to know what you can expect to receive for competing in our challenge? Look no farther!
+      table#prize_table.table
+        tr
+          td Rank
+          td Prizes
+          td Value
+        tr 
+          td 1st
+          td 
+            ul 
+              li $512 in cash
+              li Custom CodeCombat Wizard
+              li Custom CodeCombat Avatar
+              li Free One Month Coupon (choose either Rails or HTML)
+              li 6 Months of "Startup" access on Heap Analytics
+              li 1 Webstorm IDE License
+              li $300 in FireBase credits
+          td $2,054
+        tr 
+          td 2nd
+          td 
+            ul 
+              li $256 in cash
+              li Custom CodeCombat Avatar
+              li 30% off any One Month course
+              li 6 Months of "Startup" access on Heap Analytics
+              li 1 Webstorm IDE License
+              li $300 in FireBase credits
+          td $2,000
+        tr 
+          td 3rd
+          td more stuff
+          td $2,000
+        tr 
+          td 4th
+          td more stuff
+          td $2,000
+        tr 
+          td 5th
+          td more stuff
+          td $2,000
+        tr 
+          td 6th
+          td more stuff
+          td $2,000
+        tr 
+          td 7th
+          td more stuff
+          td $2,000
+        tr 
+          td 8th
+          td more stuff
+          td $2,000
+        tr 
+          td 9th
+          td more stuff
+          td $2,000
+        tr 
+          td 10th
+          td more stuff
+          td $2,000
+        tr 
+          td 11 - 40
+          td more stuff
+          td $2,000
+
     .tab-pane.well#rules
       h1(data-i18n="ladder.rules_remember_to_add_i18n_tags") Tournament Rules
       p(data-i18n="ladder.rules_but_this_is_just_placeholder") We probably don't have to translate legal documents from English, but we should translate any conversational summary.
