--- a/app/styles/play/ladder/ladder.sass
+++ b/app/styles/play/ladder/ladder.sass
@@ -76,10 +76,31 @@
 
   #prize_table
     width: 960px
+    font-weight: bold
 
-  #prize_table td
-    width: 200px 
-    vertical-align: top
+    thead
+      font-size: 24px
+
+    tbody
+      tr:not(:first-child)
+        border-top: 10px solid #ddd
+  
+      td
+        vertical-align: middle
+        
+        &:nth-child(1), &:nth-child(3)
+          text-align: center
+          font-size: 24px
+  
+        li
+          list-style: none
+
+          &:not(:last-child)
+            margin-bottom: 10px
+            border-bottom: 1px solid #ddd
+  
+          img
+            margin-right: 10px
 
 @media only screen and (max-width: 800px)
   #ladder-view
