Rules wording tweaks; highlighting new matches and end of ranking with sounds.

--- a/app/templates/play/common/ladder_submission.jade
+++ b/app/templates/play/common/ladder_submission.jade
@@ -1,4 +1,4 @@
-button.btn.btn-success.rank-button
+button.btn.btn-lg.btn-success.rank-button
   span(data-i18n="ladder.rank_no_code").unavailable.secret No New Code to Rank
   span(data-i18n="ladder.rank_my_game").rank.secret Rank My Game!
   span(data-i18n="ladder.rank_submitting").submitting.secret Submitting...
