--- a/app/templates/play/ladder/ladder.jade
+++ b/app/templates/play/ladder/ladder.jade
@@ -611,46 +611,62 @@ block content
             td $50
 
     .tab-pane.well#rules
-      h1(data-i18n="ladder.rules_remember_to_add_i18n_tags") Tournament Rules
+      h1(data-i18n="ladder.tournament_rules") Tournament Rules
       h2 General
       p You don't have to buy anything to participate in the tournament, and trying to pay us won't increase your odds of winning. 
 
       h2 Dates and Times
-      p The tournament starts on Tuesday 5/20 at 8:30AM and ends on Tuesday 6/10 at 5:30PM PDT. After the tournament finishes, we will check the games manually to prevent duplicate entries and cheating. We will email all the winners within 2 weeks of the end date.
+      p The tournament starts on Tuesday, May 20 at 8:30AM and ends on Tuesday, June 10 at 5:00PM PDT. After the tournament finishes, we will check the games manually to prevent duplicate entries and cheating. We will email all the winners within two weeks of the end date.
 
       h2 Eligilibity
       p The tournament is open to anyone over the age of 13. Players are allowed to form teams to compete, but we will only be rewarding submissions, so if a team of 10 wins, they will need to split the prize.
+
       p The tournament is NOT open to people who live in countries or states that prohibit participating or receiving a prize in a challenge (these include, but are not limited to Brazil, Quebec, Italy, Cuba, Sudan, Iran, North Korea, and Syria). Organizations involved in putting the tournament together (namely CodeCombat and all of our employees) are excluded from participating/winning prizes.
 
       h2 Submission Requirements
-      p To be eligible to win prizes, players must submit their code to the Greed ladder for ranking AND defeat our default AI. Every player that submits their code to the ladder and beats our default AI will receive $50 in AWS credits as described on the 
-        a(href="#prizes", data-toggle="tab", data-i18n="ladder.prizes") prizes page.
+      p 
+        | To be eligible to win prizes, players must submit their code to the Greed ladder for ranking AND defeat our default AI. Every player that submits their code to the ladder and beats our default AI will receive $50 in AWS credits as described on the 
+        a(href="#prizes", data-i18n="ladder_prizes.tournament_prizes") Tournament Prizes
+        |  page.
 
-      p There are some restrictions regarding who can use the AWS credits, please see the additional rules of use on 
+      p
+        | There are some restrictions regarding who can use the AWS credits. Please see the additional rules of use on 
         a(href="https://aws.amazon.com/awscredits") Amazon's AWS credits page.
 
       h2 Submission Rights
       p We reserve the right to use your submission and site identity (including username, avatar, and any information you mark as public) to promote the tournament. This is in keeping with our overall site terms of service.
 
       h2 Judging Criteria
-      p We will award prizes according to player's rank on the leaderboards. We will not be evaluating code in any manual way for common traits like adequate documentation, cleanliness, etc. Although we will run a final check of all submissions to rule out duplicates and cheating, the leaderboards are a good proxy for your final rank. Your rank will change as players submit more solutions. 
+      p
+        | We will award prizes according to player's rank on the leaderboards. We will not be evaluating code in any manual way for common traits like adequate documentation, cleanliness, etc. We will run a final check of all submissions to rule out duplicates and cheating, so during the tournament, 
+        strong the leaderboards are only a preliminary proxy for your final rank
+        | .
+
+      p
+        | Your rank will change as players submit more solutions and more matches are played according to 
+        a(href="https://github.com/codecombat/bayesian-battle") our open-source ranking library, Bayesian Battle
+        | , but our final ranking may use either the Bayesian Battle rankings or an exhaustive pairwise matching round amongst the top players, where the top n players play the top n players from the opposing leaderboard and rankings are determined by (wins - losses).
 
       h2 Prizes
-      p Prizes will be awarded to everyone that achieves a rank covered on the 
-       a(href="#prizes", data-toggle="tab", data-i18n="ladder.prizes") prizes page.
+      p 
+        | Prizes will be awarded to everyone that achieves a rank covered on the 
+        a(href="#prizes", data-i18n="ladder.prizes") Tournament Prizes
+        |  page.
 
-      p Please remember that the player ranks listed on the prize page refer to ranks WITHIN a leaderboard. So if you are #2 on the Ogre leaderboard, you will get the #2 prize. Similarly, if you are #3 on the Human leaderboard, you will receive the #3 prize. As mentioned above, if you had a submission in the top 10 for both boards, we will only count your highest submission for the purposes of distributing prizes.
+      p Please remember that the player ranks listed on the prize page refer to ranks WITHIN a leaderboard. So if you are the #2 Ogre player, you will win the #2 prize. Similarly, if you are the #3 Human player, you will receive the #3 prize. If you have submissions on both leaderboards, we will only count your highest submission for the purposes of distributing prizes. As a result, your final ranking may be higher than your preliminary ranking due to removing duplicate submissions above you.
 
       h2 Verifying Potential Winners
-      p We may ask players to identify themselves so that we can detect duplicate entries. This may be done in the form of a Facebook, Google+, or LinkedIn profile, but we may need more information. All players eligible for prizes agree that refusing to provide us with identifying information may lead to removal from the tournament. 
+      p We may ask players to identify themselves so that we can detect duplicate entries. This may be done in the form of a Facebook, Google+, or LinkedIn profile, but we may need more information. All players eligible for prizes agree that refusing to provide us with identifying information may lead to ineligibility for prizes. 
 
       p On a related note, if we have reason to believe that a player has intentionally submitted duplicate entries for the purpose of receiving more prizes or manipulating the leaderboards in any way, we will remove that player and all submissions we believe to be associated with them. We want this to be fair for everyone.
 
       h2 Prize Distribution
-      p Different sponsors require different ways of claiming their prizes, and we will work with winners to ensure they are able to redeem their prizes in a timely fashion. For cash prizes, we will deliver the money via Paypal. We will not ship checks, money orders, or cash through the mail. We will assume reasonable international money transfer costs to deliver cash prizes through Paypal.
+      p Different sponsors require different ways of claiming their prizes, and we will work with winners to ensure they are able to redeem their prizes in a timely fashion. For cash prizes, we will deliver the money via PayPal. We will not ship checks, money orders, or cash through the mail. We will assume reasonable international money transfer costs to deliver cash prizes through Paypal.
 
       p Winners are responsible for any taxes associated with claiming their prizes. CodeCombat is not responsible for filing paperwork on behalf of winners for tax claims. 
 
       h2 Contact
-      p If you have any questions or would like to get in touch with us for any other reason, we can be reached at team@codecombat.com. You can also post to our public 
-        a(href="http://discourse.codecombat.com/") Discourse forum.
+      p
+        | If you have any questions or would like to get in touch with us for any other reason, we can be reached at team@codecombat.com. You can also post to our public 
+        a(href="http://discourse.codecombat.com/") Discourse forum
+        | .
