Edited judging criteria

--- a/app/templates/play/ladder/ladder.jade
+++ b/app/templates/play/ladder/ladder.jade
@@ -633,8 +633,7 @@ block content
       p We reserve the right to use your submission and site identity (including username, avatar, and any information you mark as public) to promote the tournament. This is in keeping with our overall site terms of service.
 
       h2 Judging Criteria
-      p We will award prizes according to player's rank on the leaderboards. We will not be evaluating code in any manual way for common traits like adequate documentation, cleanliness, etc. Although we will run a final check of all submissions to rule out duplicates and cheating, the leaderboards are a good proxy for your final rank. Your rank will change as players submit more solutions. 
-
+      p We will calculate final rankings by running the top 150 games on the public leaderboard from both sides against each other and sorting solutions by wins and losses. The final ranking will be performed with a snapshot of solutions taken the end of the contest. The final ranking methedology is subject to change. We will not be evaluating code in any manual way for common traits like adequate documentation, cleanliness, etc. The public leaderboards are a good proxy for your final rank, but are not guaranteed to be accurate. Your leaderboard rank will change as players submit more solutions. We reserve the right to disqualify any player for any reason.
       h2 Prizes
       p Prizes will be awarded to everyone that achieves a rank covered on the 
        a(href="#prizes", data-toggle="tab", data-i18n="ladder.prizes") prizes page.
