A couple improvements for the LadderSubmissionView.

--- a/app/templates/play/common/ladder_submission.jade
+++ b/app/templates/play/common/ladder_submission.jade
@@ -1,4 +1,4 @@
-button.btn.btn-lg.btn-success.rank-button
+button.btn.btn-lg.btn-block.btn-success.rank-button
   span(data-i18n="ladder.rank_no_code").unavailable.secret No New Code to Rank
   span(data-i18n="ladder.rank_my_game").rank.secret Rank My Game!
   span(data-i18n="ladder.rank_submitting").submitting.secret Submitting...
@@ -6,4 +6,9 @@ button.btn.btn-lg.btn-success.rank-button
   span(data-i18n="ladder.rank_failed").failed.secret Failed to Rank
   span(data-i18n="ladder.rank_being_ranked").ranking.secret Game Being Ranked
 
+if lastSubmitted
+  .last-submitted.secret submitted #{lastSubmitted}
+
 a(href=simulateURL, data-i18n="ladder.help_simulate").help-simulate.secret Help simulate games?
+
+.clearfix
