Put some tournament details in there. Muted some extra casting sounds during level load.

--- a/app/styles/play/ladder/ladder.sass
+++ b/app/styles/play/ladder/ladder.sass
@@ -1,6 +1,31 @@
 #ladder-view
+  .main-content-area
+    background-color: whitesmoke
+
+  #level-column img
+    margin: -14px -12px 0px -12px
+    width: 100%
+    width: -webkit-calc(100% + 24px)
+    width: calc(100% + 24px)
+
   h1
     text-align: center
+
+  .tournament-blurb
+    margin: -20px -12px 20px -12px
+    padding: 10px
+    background-color: white
+
+    h2
+      text-align: center
+
+    a
+      font-weight: bold
+
+    .sponsor-logos
+      padding: 10px 15px 10px 15px
+      img
+        margin: 0px 15px
     
   .tab-pane
     margin-top: 10px
