Updated rules to be subject to change

--- a/app/templates/play/ladder/ladder.jade
+++ b/app/templates/play/ladder/ladder.jade
@@ -638,7 +638,7 @@ block content
     .tab-pane.well#rules
       h1(data-i18n="ladder.tournament_rules") Tournament Rules
       h2 General
-      p You don't have to buy anything to participate in the tournament, and trying to pay us won't increase your odds of winning. 
+      p You don't have to buy anything to participate in the tournament, and trying to pay us won't increase your odds of winning. Although we don't anticipate the rules changing, they are subject to change.
 
       h2 Dates and Times
       p The tournament starts on Tuesday, May 20 at 8:30AM and ends on Tuesday, June 10 at 5:00PM PDT. After the tournament finishes, we will check the games manually to prevent duplicate entries and cheating. We will email all the winners within two weeks of the end date.
