--- a/app/styles/notify.sass
+++ b/app/styles/notify.sass
@@ -1,24 +1,27 @@
 .notifyjs-achievement-base
-  opacity: 0.85
-  width: 400px
-  background: #F5F5F5
-  padding: 40px 10px 0px 10px
-  border-radius: 10px
+  background: url("/images/pages/base/notify_mockup.png")
+  background-size: 100% 100%
+  width: 500px
+  height: 200px
+  padding: 35px 20px 15px 15px
   text-align: center
 
   .achievement-body
-
-    .achievement-title
-      font-family: Bangers
-      font-size: 22px
-
     .achievement-image
       img
         float: left
         width: 100px
         height: 100px
         border-radius: 50%
-        margin: 0px 30px 30px 30px
+        margin: 30px 40px 20px 30px
+
+    .achievement-title
+      font-family: Bangers
+      font-size: 28px
+
+    .achievement-description
+      margin-top: 10px
+      font-size: 16px
 
     .achievement-message
       &:empty
@@ -26,11 +29,13 @@
 
 
     .achievement-progress
-      padding: 10px 0px 0px 0px
+      padding: 25px 0px 0px 0px
 
       .progress-wrapper
         .progress-bar-wrapper
           width: 100%
         .earned-exp
+          padding-left: 5px
           font-family: Bangers
+          font-size: 16px
           float: right
