Processed Scott's feedback. Db endpoint slightly safer, some refactorings.

--- a/app/templates/achievement_notify.jade
+++ b/app/templates/achievement_notify.jade
@@ -1,12 +1,12 @@
 div
-  div.clearfix.achievement-body
-    div.achievement-image(data-notify-html="image")
-    div.achievement-content
-      div.achievement-title(data-notify-html="title")
-      div.achievement-description(data-notify-html="description")
+  .clearfix.achievement-body
+    .achievement-image(data-notify-html="image")
+    .achievement-content
+      .achievement-title(data-notify-html="title")
+      .achievement-description(data-notify-html="description")
 
-      div.achievement-progress
-        div.achievement-message(data-notify-html="message")
-        div.progress-wrapper
-          div.earned-exp(data-notify-html="earnedExp")
-          div.progress-bar-wrapper(data-notify-html="progressBar")
+      .achievement-progress
+        .achievement-message(data-notify-html="message")
+        .progress-wrapper
+          .earned-exp(data-notify-html="earnedExp")
+          .progress-bar-wrapper(data-notify-html="progressBar")
